bin/testsuite/tests/compiler/src/errors/compiler3117.swg
#global testerror "Err0120"
struct AA {}

public func toto3117(x: AA) {}
